--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -42,6 +42,7 @@
 }
 
 .opacityContainer {
+  width: 100%;
   color: white;
   background: rgba(72, 140, 166, 0.8) !important;
 }
